This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
9/21/24: Added options to autocontouring to make one polygon at a point
clicked with the mouse and to find contours within a polygon subarea.

9/21/24: Added argument to EndAcquireAtItems to suppress message box at end.

9/21/24: Added property to control minimum tilt angle at which multishot will
compensate focus for tilt.

9/21/24: Added script commands to open and add images to the secondary stack
window, and to set the zoom and center position of a buffer.

9/19/24: Fixed question popups in new map routine to properly stop a
script if encountered with no message box on errors, and bypassed question on
saving into file if running Acquire at Items (In 4.1).

9/19/24: Fixed status for stage Y axis from JEOL to be 0 if 2 (In 4.1).

9/18/24: Fixed separate zoom for View so changing it doesn't change general
zoom (In 4.1).

9/15/24: SEM_4-1-16
9/14/24: Changed tilt limit in Walkup script command to use MaximumTiltAngle
(In 4.1).

9/14/24: Fixed Refine ZLP, broken 8/7 for scopes with NoSpectrumOffset set
(In 4.1).

9/4/24: Made sure number of frames to skip before exposure is 0 when acquiring
from Falcon 3 or 4 and zeroed out wild values from settings (In 4.1).

9/3/24: Added script command to make next Multiple Records use hole
specification stored in a given Navigator item.

9/3/24: Fixed multigrid opening column valves at inappropriate times.

8/21/22: SEM_4-1-15
8/21/22: Updated Ctfplotter in package to fix a problem with autotuning and
work better with astigmatism and coma routines (In 4.1).

8/21/22: Possibly fixed a problem with changing low dose area at zero IS on
JEOL (In 4.1).

8/19/24: Fixed a problem with multigrid keeping track of last frame number.
