@@ -91,11 +91,11 @@
         width: 178px;
       }
       .auto-style26 {
-        width: 160px;
+        width: 168px;
         font-weight: bold;
       }
       .auto-style27 {
-        width: 160px;
+        width: 168px;
       }
   --></style>
   </HEAD>
@@ -281,6 +281,20 @@
           Move last added point</td>
         <td class="auto-style17">
           Move item</td>
+        <td class="auto-style21">
+          &nbsp;</td>
+      </tr>
+      <tr>
+        <td class="auto-style25">
+          Ctrl-Shift Middle</td>
+        <td class="auto-style27">
+          Add polygon if enabled in Autocontouring dialog</td>
+        <td class="auto-style9">
+          &nbsp;</td>
+        <td class="auto-style23">
+          &nbsp;</td>
+        <td class="auto-style17">
+          &nbsp;</td>
         <td class="auto-style21">
           &nbsp;</td>
       </tr>
