@@ -4001,6 +4001,13 @@
           <TD>Minimum tilt angle above which the Multiple Records routine will change focus 
             to compensate for the tilt; the default is 10 degrees.</TD>
         </TR>
+        <TR VALIGN="top">
+          <TD>AutocontSubareaSizeFac</TD>
+          <TD>Follow with the linear size of the region to extract for making a single 
+            polygon around a grid square by clicking, as a multiple of the current setting 
+            for the maximum grid square size in the Autocontouring Grid Squares dialog; the 
+            default is 6.&nbsp; A smaller value will make it run faster.</TD>
+        </TR>
       </TABLE>
       <BR>
       <P><A NAME="tsc_properties"></A><B>Tilt series controller properties</B></P>
