@@ -3,6 +3,12 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+9/25/24: Fixed setting of current directory when Navigator file is saved or
+loaded.
+
+9/25/24: Switched making a single polygon by autocontouring to Ctrl-Shift
+middle mouse button and fixed some problems with it.
+
 9/21/24: Added options to autocontouring to make one polygon at a point
 clicked with the mouse and to find contours within a polygon subarea.
 
